syntax = "proto2";

package mon;

message Function {
  required string name = 1;
}

message FunctionCompleted {
  required Function func = 1;
}

message FunctionStarted {
  required Function func = 1;
}

message FunctionProgress {
    required Function func = 1;
    required float frac = 2;
}

message FunctionsAnalyzed {
    repeated Function funcs = 1;
}

message FunctionStep {
    required Function func = 1;
    required string step = 2;
}

message ClientConnect {
    required uint32 pid = 1;
}

message Message {
    oneof message {
        FunctionStarted   func_started   = 1;
        FunctionCompleted func_completed = 2;
        FunctionProgress  func_progress  = 3;
        FunctionsAnalyzed funcs_analyzed = 4;
        FunctionStep      func_step      = 5;
    }
}
